...
              paddingLeft: 10 * k,
              fontSize: 16 * k,
              fontFamily: 'Roboto-Regular',
              width: 300 * k,
              height: 40 * k,
            }}
            testID="bypassPhoneInput"
          />
        </View>
        <View
          style={{
            height: 0.5 * k,
            width,
...
          }}
        />

        <TouchableOpacity
          onPress={onRegister}
          style={styles.buttonStyle}
          testID="bypassRegisterButton"
        >
          <RText style={styles.textStyle}>Next</RText>
        </TouchableOpacity>
      </View>
    )
  })
...
